--- a/app/views/messages/_main_chat.html.erb
+++ b/app/views/messages/_main_chat.html.erb
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div class="massages">
+<div class="messages">
   <div class="message">
     <div class="upper-message">
       <div class="message-user">
